// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders border 0 without warning 1`] = `
.c0 {
  border-radius: 2px;
  border: 0;
}

<div
  className="c0"
/>
`;

exports[`Card renders large box shadow with default border 1`] = `
.c0 {
  border-radius: 2px;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2),0 6px 4px -4px rgba(0,0,0,0.12),0 8px 16px -1px rgba(0,0,0,0.16);
  border: 1px solid #c0cad5;
}

<div
  className="c0"
/>
`;

exports[`Card renders medium box shadow with default border 1`] = `
.c0 {
  border-radius: 2px;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.2),0 4px 2px -2px rgba(0,0,0,0.12),0 4px 8px -1px rgba(0,0,0,0.16);
  border: 1px solid #c0cad5;
}

<div
  className="c0"
/>
`;

exports[`Card renders medium box shadow with specified borderRadius 1`] = `
.c0 {
  border-radius: 0;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.2),0 4px 2px -2px rgba(0,0,0,0.12),0 4px 8px -1px rgba(0,0,0,0.16);
  border: 1px solid #c0cad5;
}

<div
  className="c0"
/>
`;

exports[`Card renders medium box shadow with specified borderWidth 1`] = `
.c0 {
  border-radius: 2px;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.2),0 4px 2px -2px rgba(0,0,0,0.12),0 4px 8px -1px rgba(0,0,0,0.16);
  border: 2px solid #c0cad5;
}

<div
  className="c0"
/>
`;

exports[`Card renders small box shadow with default border 1`] = `
.c0 {
  border-radius: 2px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  border: 1px solid #c0cad5;
}

<div
  className="c0"
/>
`;

exports[`Card renders xlarge box shadow with default border 1`] = `
.c0 {
  border-radius: 2px;
  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.16),0 10px 8px -5px rgba(0,0,0,0.16),0 12px 32px -2px rgba(0,0,0,0.16);
  border: 1px solid #c0cad5;
}

<div
  className="c0"
/>
`;
